2003-11-03 Yukihiro Nakai <ynakai@redhat.com>

	* cong-editor-widget3.c

	Get strings from immodule as UTF8, notify immodule of focus in/out (bug 125993)

2003-11-01  Paul Smith  <conglomerate@pcs.uklinux.net>

	* cong-primary-window.c, cong-menus.c

	Set Cut and Copy toolbars to be unsensitive when current selection cannot be cut. (Bug 125342)

2003-10-31  Paul Smith  <conglomerate@pcs.uklinux.net>

	* cong-menus.c

	Set Cut and Copy menu items to be unsensitive when current selection can't be cut (Bug 125342).  Still to do toolbar items and Paste item.

2003-10-31  Pav Lucistnik <pav@oook.cz>

	* plugin-templates.c

	Fixed C99-ism

	--- Version 0.7.6 ---	

2003-10-27  Jeff Martin  <jeff@custommonkey.org>
  
	* plugin-templates.c
  
 	Change storage of template path the be a list of strings not a colon-separated path. Add expansion of ~ in paths
	
2003-10-27  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-text-cache.c

	Fixed a char versus byte confusion that broke i18n text.

	* cong-editor-node-comment.c, cong-editor-node-text.c, cong-editor-widget.h, cong-editor-widget3.c, global.h, popup.c

	Initial support for GTK Input Methods; filter span tags using DTD if available; fixed Glade path for tags selection dialog

2003-10-26  Boris Goldowsky  <boris@alum.mit.edu>
 
	* cong-app.c, cong-dispspec-registry.c, cong-dispspec-registry.h
 
	If there is a gconf key specifying dispspec directories, 
	load them from there instead of using application's default directory. 

2003-10-25  Robert Varga <frozenfingers@xs4all.ro>

	* cong-location.h
       
	gtk-doc comments.
	
2003-10-24  Geert-Jan Van den Bogaerde <gvdbogaerde@pandora.be>

	* cong-location.c

	Made moving the cursor to the right move through tags just like cursor movement to the left (bug #125341).

2003-10-24  Jeff Martin <jeff@custommonkey.org>

	* Makefile.am cong-app.c cong-fake-plugin-hooks.h plugin-doc-from-xds.c plugin-templates.c

	Replaced doc-from-xds plugin with template plugin
