@@ -1,3 +1,9 @@
+2003-11-03  Boris Goldowsky  <boris@alum.mit.edu>
+
+	* cong-editor-area-span-tag.c
+
+	Force span tag to be wide enough to accommodate its title.  Center contents.
+
 2003-11-03 Yukihiro Nakai <ynakai@redhat.com>
 
 	* cong-editor-widget3.c
